--- a/src/App.css
+++ b/src/App.css
@@ -97,8 +97,8 @@
   background-color: yellow;
 }
 
-.bg-black{
-  background-color: black;
+.bg-orange{
+  background-color: orange;
 }
 
 .size-container{
