--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,9 @@
   background-color: white;
   display: flex;
   justify-content: space-evenly;
-  width: 400px;
-  margin-top: 80px;
+  width: 420px;
+  margin-bottom: 10px;
+  margin-top: 75px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 50px;
@@ -51,7 +52,7 @@
 }
 
 .emoji-item:hover{
-  transform: scale(1.4);
+  transform: scale(1.5);
 }
 
 .emoji-editor-container{
